unami-analytics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unami-analytics
  namespace: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unami-analytics
  template:
    metadata:
      labels:
        app: unami-analytics
    spec:
      nodeSelector:
        nodeRole: worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - unami-analytics
              topologyKey: kubernetes.io/hostname
      containers:
      - name: unami-analytics
        image: docker.umami.is/umami-software/umami:postgresql-latest
        ports:
        - containerPort: 3000
          name: unami
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
