unami-analytics/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: unami-analytics
  namespace: analytics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  rules:
  - host: analytics.rohitpotato.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: unami-analytics
              port:
                number: 3000
  tls:
    - hosts:
        - analytics.rohitpotato.xyz
      secretName: unami-analytics-tls
